test/corpus/flex_container.txt
==============
Flex container
==============

FlexContainer(
  direction = horizontal,
  alignment = Alignment(
    horizontal = start,
    vertical = center,
  ),
) {
  Image()

  FlexContainer(
    direction = vertical,
    alignment = Alignment(
      horizontal = center,
      vertical = center,
    ),
  ) {
    Text(kind = title)
    Text(kind = body)
  }
}

--------------

(source_file
  (node_type_definition
    name: (identifier)
    (constructor
      (property_list
        (property_definition
          name: (identifier)
          (literal))
        (property_definition
          name: (identifier)
          (type_value_definition
            (type_value_identifier)
            (constructor
              (property_list
                (property_definition
                    name: (identifier)
                    (literal))
                (property_definition
                  name: (identifier)
                  (literal))))))))
    (children_definition
      (node_type_definition
        name: (identifier)
        (constructor))

      (node_type_definition
        name: (identifier)
        (constructor
          (property_list
            (property_definition
              name: (identifier)
              (literal))
            (property_definition
              name: (identifier)
              (type_value_definition
                (type_value_identifier)
                (constructor
                  (property_list
                    (property_definition
                        name: (identifier)
                        (literal))
                    (property_definition
                      name: (identifier)
                      (literal))))))))
        (children_definition
          (node_type_definition
            name: (identifier)
            (constructor
              (property_list
                (property_definition
                  name: (identifier)
                  (literal)))))
          (node_type_definition
            name: (identifier)
            (constructor
              (property_list
                (property_definition
                  name: (identifier)
                  (literal))))))))))
